--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 					<img src="img/robot.png" alt="robot Holo" />
 				</div>
       </section>
+			<footer class="hello__footer">
+				<ul class="footer__list list-reset">
+					<li class="footer__item"><a href="https://github.com/Regina5425/say_hello" target="_blank" class="footer__link">GitHub</a></li>
+					<li class="footer__item">2021</li>
+				</ul>
+			</footer>
     </div>
     <script src="js/index.js"></script>
   </body>
